--- a/dockerfiles/Dockerfile.alpine
+++ b/dockerfiles/Dockerfile.alpine
@@ -1,10 +1,3 @@
-# docker run -it --rm --name tsfm-pipeline 
-# -v ${pwd}/data:/app/data:ro 
-# -v ${pwd}/models:/app/models:ro 
-# -v ${pwd}/output:/app/output 
-# tsfm
-
-
 # Bare linux + conda
 FROM frolvlad/alpine-glibc:latest
 LABEL version="0.0.1"
@@ -18,7 +11,4 @@ RUN sh run_conda.sh pip install --no-cache-dir -r requirements.txt
 WORKDIR /app
 COPY . .
 ENTRYPOINT [ "sh", "/run_conda.sh" ]
-CMD [ "python", "pipeline.py", "-d", "data", "-m", "models", "-o", "output" ]
-
-
-# python -c "from transformers import pipeline; print(pipeline('sentiment-analysis')('I hate you'))"
+CMD [ "python", "scripts/inference.py", "-d", "data", "-m", "models", "-o", "output" ]
