--- a/dockerfiles/Dockerfile.python
+++ b/dockerfiles/Dockerfile.python
@@ -1,10 +1,4 @@
-# docker run -it --rm --name tsfm-pipeline 
-# -v ${pwd}/data:/app/data:ro 
-# -v ${pwd}/models:/app/models:ro 
-# -v ${pwd}/output:/app/output 
-# tsfm
-
-# !! BROKEN on Alpine!!
+# Unfortunately broken on Alpine image (python:3-alpine)
 
 # Bare Python
 FROM python:3
@@ -13,7 +7,4 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 WORKDIR /app
 COPY . .
-CMD [ "python", "pipeline.py", "-d", "data", "-m", "models", "-o", "output" ]
-
-
-# python -c "from transformers import pipeline; print(pipeline('sentiment-analysis')('I hate you'))"
+CMD [ "python", "scripts/inference.py", "-d", "data", "-m", "models", "-o", "output" ]
